@@ -85,9 +85,10 @@
       L396, 24:R#.18   @3ds
       L405, 25:R#.19   @znote BookList
       L408, 26:todo 深入理解nginx redis设计与实现
-     Zndex_E : //z 2015-07-08 18:35:04 L.176'19496 T1458179770.K ~463 +----+----+----+----+----+
-     TimeCnt : //z 2015-07-06 12:45:58 L.178'40442 T2164889884.K ~18  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-07-06 12:45:55 L.178'40445 T2164889881.K ~23  +----+----+----+----+----+
+     Zndex_E : //z 2015-07-16 13:11:21 L.168'38919 T1395134381.K ~475 +----+----+----+----+----+
+     TimeCnt : //z 2015-07-16 13:11:21 L.168'38919 T1395134381.K ~21  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-07-16 13:06:43 L.168'39197 T1394128213.K ~24  +----+----+----+----+----+
+     #24  R+ : //z 2015-07-16 13:06:43 L.168'39197 T1394128213.K ~24    V+.488  L+.528  
      #23  R+ : //z 2015-07-06 12:45:55 L.178'40445 T2164889881.K ~23    V+.474  L+.515  
      #22  R+ : //z 2015-07-02 15:24:43 L.182'30917 T1470713170.K ~22    V+.470  L+.509  
      #21  R+ : //z 2015-07-01 18:10:34 L.183'20966 T981018703 .K ~21    V+.448  L+.490  
@@ -113,7 +114,9 @@
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1   +----+----+----+----+----+
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-07-08 18:35:04 L.176'19496 T1458179770.K ~486   R+.23   L+.521  --+----+
+     Version : //z 2015-07-16 13:11:21 L.168'38919 T1395134381.K ~499   R+.24   L+.564  --+----+
+     #26  V+ : //z 2015-07-16 13:07:09 L.168'39171 T1394164024.K ~494   R+.24   L+.532  
+     #25  R+ : //z 2015-07-16 13:06:43 L.168'39197 T1394128213.K ~488   R+.24   L+.529  V+.488  
      #25  V+ : //z 2015-07-06 12:45:55 L.178'40445 T2164889881.K ~475   R+.23   L+.517  
      #24  R+ : //z 2015-07-06 12:45:55 L.178'40445 T2164889881.K ~474   R+.23   L+.516  V+.474  
      #24  R+ : //z 2015-07-02 15:24:43 L.182'30917 T1470713170.K ~470   R+.22   L+.510  V+.470  
@@ -521,3 +524,42 @@ https://graphics.stanford.edu/~mdfisher/BaseCode.html
 2015-07-08 18:34 zitem dx 10 的例子
 http://www.braynzarsoft.net/index.php?p=DX10Lessons
 #endregion //z 2015-07-06 12:45:55 L.178'40445 BG57IV3@XCL T2164889881.K.F4146951713-+----+----+
+
+#region 07-16 13:06 R#.24   @leetcode
+//z 2015-07-16 13:06:51 L.168'39189 T1394128244.K[T19,L528,R24,V490]
+01. 
+http://algorithm.yuanbin.me/
+http://www.jiuzhang.com/solutions/
+http://www.jiuzhang.com/
+http://coolshell.cn/articles/12052.html#more-12052
+https://www.gitbook.com/book/siddontang/leetcode-solution/details
+http://www.raychase.net/2763
+
+//z 2015-07-16 13:08:03 L.168'39117 T1394199955.K[T20,L536,R24,V496]
+http://blog.csdn.net/havenoidea/article/category/1640099
+
+//z 2015-07-16 13:11:21 L.168'38919 T1395134381.K[T21,L541,R24,V499]
+我和身边的朋友找工作必刷的LeetCode： 
+http://oj.leetcode.com/ 
+
+复杂数据结构的讲解及实现GeeksForGeeks： 
+http://www.geeksforgeeks.org/ 
+
+面试前了解公司的背景及面试题： 
+http://www.glassdoor.com/ 
+
+一个比较牛逼的coding challenge网站： 
+https://www.hackerrank.com/ 
+
+国内的面试题总结，我在csdn发现的July的博客： 
+http://blog.csdn.net/v_JULY_v 
+他总结出的《程序员编程艺术》： 
+https://github.com/julycoding/The-Art-Of-Programming-By-July/blob/master/ebook/zh/Readme.md 
+
+国内比较有名的可能是北大的oj： 
+http://poj.org/ 
+其他的国内国外的OJ请自行查询维基百科。 
+
+最近发现的一个比较有意思的论坛Hacker News： 
+https://news.ycombinator.com 
+#endregion //z 2015-07-16 13:06:43 L.168'39197 BG57IV3@XCL T1394128213.K.F4146951713-+----+----+
